--- a/src/ui/Product.fxml
+++ b/src/ui/Product.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -24,7 +25,7 @@
             <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                <children>
                   <Label text="Name" textFill="#e4d290" />
-                  <TextField fx:id="productTxt" alignment="CENTER" />
+                  <TextField fx:id="productName" alignment="CENTER" />
                </children>
             </VBox>
             <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
@@ -66,6 +67,7 @@
             <ComboBox fx:id="productType" prefWidth="150.0" />
          </children>
       </HBox>
-      <Button mnemonicParsing="false" onAction="#addIngredient" text="Añadir" />
+      <ListView fx:id="ingredientsList" prefHeight="200.0" prefWidth="200.0" />
+      <Button mnemonicParsing="false" onAction="#addProduct" text="Añadir" />
    </children>
 </VBox>
