--- a/src/ui/Add.fxml
+++ b/src/ui/Add.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="305.0" prefWidth="167.0" spacing="25.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="351.0" prefWidth="167.0" spacing="25.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label prefWidth="76.0" text="Menu" textFill="#e4d290">
          <font>
@@ -14,6 +14,7 @@
          </font>
       </Label>
       <Button mnemonicParsing="false" onAction="#loadProduct" text="Agregar producto" />
+      <Button mnemonicParsing="false" onAction="#loadEmployee" text="Agregar empleado" />
       <Button mnemonicParsing="false" onAction="#loadClient" text="Agregar cliente" />
       <Button mnemonicParsing="false" onAction="#loadIngredient" text="Agregar ingrediente" />
       <Button mnemonicParsing="false" onAction="#loadType" text="Agregar tipo de producto" />
