--- a/src/ui/Delete.fxml
+++ b/src/ui/Delete.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="309.0" prefWidth="167.0" spacing="25.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="167.0" spacing="25.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label prefWidth="76.0" text="Menu" textFill="#e4d290">
          <font>
@@ -14,6 +14,7 @@
          </font>
       </Label>
       <Button mnemonicParsing="false" onAction="#loadDeleteProduct" text="Eliminar producto" />
+      <Button mnemonicParsing="false" onAction="#loadDeleteEmployee" text="Eliminar empleado" />
       <Button mnemonicParsing="false" onAction="#loadDeleteClient" text="Eliminar cliente" />
       <Button mnemonicParsing="false" onAction="#loadDeleteIngredient" text="Eliminar ingrediente" />
       <Button mnemonicParsing="false" onAction="#loadDeleteType" text="Eliminar tipo de producto" />
