--- a/src/ui/Edit.fxml
+++ b/src/ui/Edit.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="167.0" spacing="25.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="167.0" spacing="25.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label prefWidth="76.0" text="Menu" textFill="#e4d290">
          <font>
@@ -14,6 +14,7 @@
          </font>
       </Label>
       <Button fx:id="editProductBtn" mnemonicParsing="false" onAction="#loadEdit" text="Editar producto" />
+      <Button fx:id="editEmployeeBtn" mnemonicParsing="false" onAction="#loadEdit" text="Editar empleado" />
       <Button fx:id="editClientBtn" mnemonicParsing="false" onAction="#loadEdit" text="Editar cliente" />
       <Button fx:id="editIngredientBtn" mnemonicParsing="false" onAction="#loadEdit" text="Editar ingrediente" />
       <Button fx:id="editTypeBtn" mnemonicParsing="false" onAction="#loadEdit" text="Editar tipo de producto" />
