--- a/bin/ui/Recover.fxml
+++ b/bin/ui/Recover.fxml
@@ -11,8 +11,8 @@
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" VBox.vgrow="ALWAYS">
          <children>
-            <TextField layoutX="225.0" layoutY="129.0" />
-            <TextField layoutX="225.0" layoutY="188.0" />
+            <TextField fx:id="recoverUsername" layoutX="225.0" layoutY="129.0" />
+            <TextField fx:id="newPassword" layoutX="225.0" layoutY="188.0" />
             <Label layoutX="205.0" layoutY="27.0" text="Golden House" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="29.0" />
@@ -25,10 +25,11 @@
             </Label>
             <Label layoutX="223.0" layoutY="112.0" text="Ingresa el nombre de usuario" textFill="#e4d290" />
             <Label layoutX="225.0" layoutY="169.0" text="Ingresa la nueva contraseña" textFill="#e4d290" />
-            <Button layoutX="298.0" layoutY="294.0" mnemonicParsing="false" text="Cambiar contraseña" />
+            <Button layoutX="298.0" layoutY="294.0" mnemonicParsing="false" onAction="#recover" text="Cambiar contraseña" />
             <Button layoutX="225.0" layoutY="294.0" mnemonicParsing="false" onAction="#loadLogin" text="Cancelar" />
             <Label layoutX="225.0" layoutY="227.0" text="Repite la contraseña" textFill="#e4d290" />
-            <TextField layoutX="224.0" layoutY="250.0" />
+            <TextField fx:id="repeatPassword" layoutX="224.0" layoutY="250.0" />
+            <Label fx:id="warningLabel" alignment="CENTER" layoutX="223.0" layoutY="95.0" prefHeight="17.0" prefWidth="155.0" textAlignment="CENTER" textFill="RED" />
          </children>
       </Pane>
    </children>
