--- a/bin/ui/Ingredient.fxml
+++ b/bin/ui/Ingredient.fxml
@@ -9,7 +9,7 @@
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="215.0" prefWidth="241.0" spacing="15.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Añade un ingrediente nuevo" textFill="#e4d290" />
-      <Label fx:id="warningLabel" prefHeight="17.0" prefWidth="149.0" textAlignment="CENTER" textFill="#e4d290" />
+      <Label fx:id="warningLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="149.0" textFill="#e4d290" />
       <HBox alignment="CENTER" prefHeight="31.0" prefWidth="600.0">
          <children>
             <TextField fx:id="ingredientTxt" alignment="CENTER" />
