--- a/src/ui/Order.fxml
+++ b/src/ui/Order.fxml
@@ -46,6 +46,22 @@
             <Insets left="5.0" right="5.0" />
          </padding>
       </HBox>
+      <HBox alignment="CENTER" prefHeight="45.0" prefWidth="397.0">
+         <children>
+            <Label text="O Busca el cliente: " textFill="#e4d290" />
+            <TextField fx:id="searchClientText" prefHeight="25.0" prefWidth="158.0" promptText="Ingresa nombre y apellido" />
+            <Button mnemonicParsing="false" onAction="#binarySearchClient" text="Buscar">
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
+            </Button>
+            <Label fx:id="timeLabel" textFill="#e4d290">
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+      </HBox>
       <HBox alignment="CENTER" prefHeight="31.0" prefWidth="600.0">
          <children>
             <Label text="Productos" textFill="#e4d290">
@@ -66,10 +82,10 @@
             </Button>
          </children>
       </HBox>
-      <VBox alignment="CENTER" prefHeight="143.0" prefWidth="223.0">
+      <VBox alignment="CENTER" prefHeight="127.0" prefWidth="397.0">
          <children>
             <Label text="Observaciones" textFill="#e4d290" />
-            <TextArea fx:id="observationsField" prefHeight="114.0" prefWidth="224.0" />
+            <TextArea fx:id="observationsField" prefHeight="116.0" prefWidth="397.0" />
          </children>
       </VBox>
       <Button mnemonicParsing="false" onAction="#finishAddOrder" text="Añadir" />
