--- a/bin/ui/MainPane.fxml
+++ b/bin/ui/MainPane.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox prefHeight="26.0" prefWidth="600.0" style="-fx-background-color: #000000;">
@@ -27,6 +26,6 @@
             </Label>
          </children>
       </HBox>
-      <BorderPane fx:id="mainPane" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+      <BorderPane fx:id="mainPane" prefHeight="200.0" prefWidth="200.0" stylesheets="@styles.css" VBox.vgrow="ALWAYS" />
    </children>
 </VBox>
